# module25

task1/: base.py  main.py  parametr.py  pyproject.toml
task2/: logs_exchange.txt  main.py  parametr.py  pyproject.toml  requestpb.py
