[tool.poetry]
name = "module25task2"
version = "0.1.0"
description = ""
authors = ["Strategs <127782103+Strategs@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^11.0.3"
names = "^0.3.0"
aiohttp = "^3.8.5"
asyncio = "^3.4.3"
logging = "^0.4.9.6"
aiofile = "^3.8.7"
aiopath = "^0.6.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
